--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -4,8 +4,8 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+person_one:
+  name: Person1
+  imageurl: http://api.randomuser.me/portraits/women/80.jpg
+  times_liked: 10
+  times_rated: 42
